[gd_scene load_steps=4 format=3 uid="uid://bb5illnlkk5id"]

[ext_resource type="Script" path="res://hud.gd" id="1_urxde"]
[ext_resource type="FontFile" uid="uid://ooxx6kwicwu1" path="res://Assets/Xolonium-Bold.ttf" id="2_qrutn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cmj33"]
size = Vector2(48, 54.75)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_urxde")

[node name="Area2D" type="Area2D" parent="."]

[node name="Element1" type="CollisionShape2D" parent="Area2D"]
position = Vector2(120, 109.5)
scale = Vector2(5, 4)
shape = SubResource("RectangleShape2D_cmj33")
debug_color = Color(0.403922, 0.482353, 0.952941, 0.419608)

[node name="Label1" type="Label" parent="Area2D/Element1"]
offset_left = -24.0
offset_top = -27.0
offset_right = 24.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("2_qrutn")
theme_override_font_sizes/font_size = 0
autowrap_mode = 3

[node name="Element2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(360, 110)
scale = Vector2(5, 4)
shape = SubResource("RectangleShape2D_cmj33")
debug_color = Color(0.403922, 0.482353, 0.952941, 0.419608)

[node name="Label2" type="Label" parent="Area2D/Element2"]
offset_left = -24.0
offset_top = -27.0
offset_right = 24.0
offset_bottom = 28.0
theme_override_fonts/font = ExtResource("2_qrutn")
autowrap_mode = 3

[node name="Element3" type="CollisionShape2D" parent="Area2D"]
position = Vector2(600, 110)
scale = Vector2(5, 4)
shape = SubResource("RectangleShape2D_cmj33")
debug_color = Color(0.403922, 0.482353, 0.952941, 0.419608)

[node name="Label3" type="Label" parent="Area2D/Element3"]
offset_left = -23.0
offset_top = -27.0
offset_right = 24.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("2_qrutn")
autowrap_mode = 3

[node name="Element4" type="CollisionShape2D" parent="Area2D"]
position = Vector2(840, 110)
scale = Vector2(5, 4)
shape = SubResource("RectangleShape2D_cmj33")
debug_color = Color(0.403922, 0.482353, 0.952941, 0.419608)

[node name="Label4" type="Label" parent="Area2D/Element4"]
offset_left = -23.0
offset_top = -27.0
offset_right = 24.0
offset_bottom = 28.0
theme_override_fonts/font = ExtResource("2_qrutn")
autowrap_mode = 3

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
